# real-time-tracking-latency-budget

./: .gitignore  README.md
cpp/tracking_core/: CMakeLists.txt
cpp/tracking_core/benchmarks/: benchmark_tracking_core.cpp
cpp/tracking_core/include/tracking_core/: iou.hpp  risk_score.hpp  track_state.hpp
cpp/tracking_core/src/: iou.cpp  risk_score.cpp  track_state.cpp
cpp/tracking_core/tests/: test_tracking_core.cpp
docs/: demo_video_script.md  final_project_summary.md  interview_notes.md  limitations.md  mvp_scope.md  project_tracker.md  release_notes_v1.0.0.md  release_notes_v1.1.0.md  release_notes_v1.2.0.md  reproduction_matrix.md  resume_bullets.md  reviewer_proof_pack.md  ros2_replay_wrapper.md  screenshot_checklist.md
environment/: README.md  environment.yml  requirements-dev.txt  requirements-minimal.txt  requirements.txt
reports/: benchmark_brief.md  cpp_tracking_core.md  cpu_gpu_latency_benchmark.md  demo_notes.md  failure_analysis.md  latency_tradeoff_report.md  online_ros_image_tracking.md  risk_failure_correlation.md  robot_facing_risk_interface.md  ros2_debug_image_replay.md  ros2_end_to_end_topic_smoke_check.md  ros2_latency_probe.md  ros2_typed_topics.md  ros2_workspace_smoke_check.md  runtime_analysis.md  runtime_environment_audit.md  track_reliability_risk.md  track_risk_validation.md  tracker_comparison.md  trackeval_6seq_results.md  trackeval_results.md  trackeval_stress_test.md
results/: metrics.csv  sweep_results.csv
ros2/: README.md
ros2/ros2_tracking_latency/: package.xml  setup.cfg  setup.py
ros2/ros2_tracking_latency/ros2_tracking_latency/: image_iou_tracking_node.py  kitti_debug_image_replay_node.py  kitti_track_replay_node.py
scripts/: analyze_risk_failure_correlation.py  benchmark_cpu_gpu_latency.py  check_artifacts_exist.py  check_cpp_tracking_core.sh  check_ros2_end_to_end_topics.sh  check_ros2_message_helpers.py  check_ros2_online_image_tracking.sh  (+17 more)
(+87 files in other folders)
